--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     },
     "categories": [
         "Programming Languages"
-    ],
+	],
+	"activationEvents": [
+		"onLanguage:cmake"
+	],
+	"main": "./out/extension",
     "contributes": {
         "grammars": [{
 			"path": "./syntaxes/cmake.tmLanguage.json",
@@ -21,5 +25,8 @@
 				"path": "./snippets/fips.json"
 			}
 		]
-    }
+	},
+	"scripts": {
+		"compile": "tsc -watch -p ./"
+	}
 }
